add all typings for all components

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:ci": "npm run karma -- --browsers ChromeC,FirefoxC",
     "test:watch": "npm run karma -- --browsers ChromeC --auto-watch --no-single-run",
     "prebuild": "rm -rf build",
-    "build": "NODE_ENV=production VERSION=$npm_package_version babel src --out-dir build --ignore **/*.test.js",
+    "build": "NODE_ENV=production VERSION=$npm_package_version babel src --out-dir build --ignore **/*.test.js && node copy-files.js",
     "postbuild": "cp package.json .npmignore README.md build",
     "dev": "NODE_ENV=development webpack-dev-server -d --hot --config docs/webpack.config.js",
     "prepages": "rm -rf docs/build",
@@ -35,6 +35,8 @@
     "classnames": "^2.2.6",
     "deepmerge": "^3.2.0",
     "eventemitter3": "^3.1.0",
+    "fs-extra": "^8.1.0",
+    "glob": "^7.1.4",
     "jss": "^9.8.7",
     "jss-preset-default": "^4.5.0",
     "lodash.debounce": "^4.0.8",
