--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.11.4",
     "jasmine-core": "^3.4.0",
+    "jasmine-enzyme": "^7.1.1",
     "json-loader": "^0.5.7",
     "karma": "^4.2.0",
     "karma-chrome-launcher": "^3.1.0",
