--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://rambler-digital-solutions.github.io/rambler-ui",
   "dependencies": {
+    "@babel/runtime": "^7.8.7",
     "classnames": "^2.2.6",
     "deepmerge": "^3.2.0",
     "eventemitter3": "^3.1.0",
@@ -43,43 +44,45 @@
     "react-jss": "^10.0.4"
   },
   "devDependencies": {
-    "@mdx-js/loader": "^0.15.4",
-    "@mdx-js/mdx": "^0.15.4",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-react-constant-elements": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "@babel/standalone": "^7.8.7",
+    "@mdx-js/loader": "^1.5.7",
+    "@mdx-js/mdx": "^1.5.7",
+    "@mdx-js/react": "^1.5.7",
+    "@size-limit/preset-big-lib": "^4.1.1",
     "@types/jss": "^10.0.0",
     "@types/node": "^12.7.8",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
     "@types/react-jss": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.3.2",
-    "@typescript-eslint/parser": "^2.3.2",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.9.0",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-istanbul": "^5.0.1",
-    "babel-plugin-preval": "^1.6.4",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-inline-environment-variables": "^0.3.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.19",
-    "babel-polyfill": "^6.9.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.5.0",
-    "babel-standalone": "^6.26.0",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.0.6",
+    "babel-plugin-istanbul": "^6.0.0",
+    "babel-plugin-preval": "^4.0.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "color": "^1.0.3",
     "css-loader": "^3.2.0",
     "debug": "^2.2.0",
     "doctrine": "^2.1.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "^6.5.1",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-babel": "^3.3.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-react": "^7.4.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-react": "^7.18.3",
     "file-loader": "^4.2.0",
     "get-md-title": "^1.0.4",
     "gh-pages": "^0.12.0",
@@ -100,7 +103,7 @@
     "karma-webpack": "^4.0.2",
     "lint-staged": "^6.1.0",
     "minimist": "^1.2.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "promise-queue": "^2.2.5",
     "puppeteer": "^1.19.0",
     "raw-loader": "^3.1.0",
@@ -112,16 +115,16 @@
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.0.0",
     "recast": "^0.13.2",
-    "remark": "^9.0.0",
-    "remark-highlight.js": "^5.0.0",
-    "remark-html": "^7.0.0",
-    "size-limit": "^0.22.0",
+    "remark": "^11.0.2",
+    "remark-highlight.js": "^5.2.0",
+    "remark-html": "^10.0.0",
+    "size-limit": "^4.1.1",
     "sticky-sidebar": "^3.3.1",
     "style-loader": "^1.0.0",
     "typescript": "^3.6.3",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
-    "webpack-dev-server": "^3.8.0"
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "peerDependencies": {
     "react": "^15.3.0 || ^16.0.0",
@@ -141,6 +144,10 @@
     "*.ts": [
       "prettier --write",
       "eslint --config ./.eslintrc.typescript.json --fix",
+      "git add"
+    ],
+    "*.json": [
+      "prettier --write",
       "git add"
     ]
   }
