--- a/.babelrc
+++ b/.babelrc
@@ -1,28 +1,25 @@
 {
   "presets": [
-    ["env", {
-      "target": {
+    ["@babel/preset-env", {
+      "targets": {
         "browsers": "last 2 versions"
-      }
+      },
+      "useBuiltIns": false
     }],
-    "react"
+    "@babel/preset-react"
   ],
   "plugins": [
-    "syntax-dynamic-import",
-    "transform-react-constant-elements",
-    "transform-object-rest-spread",
-    "transform-class-properties",
-    "transform-export-extensions",
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-transform-react-constant-elements",
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-export-namespace-from",
     "preval"
   ],
   "env": {
     "production": {
       "plugins": [
-        ["transform-inline-environment-variables", {
-          "include": [
-            "VERSION"
-          ]
-        }],
         ["transform-react-remove-prop-types", {
           "mode": "wrap",
           "removeImport": false
