--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.50.1",
   "description": "Rambler UI Components based on React.js",
   "main": "index.js",
+  "module": "es/index.js",
   "typings": "index.d.ts",
   "scripts": {
     "karma": "NODE_ENV=test /usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start",
@@ -11,7 +12,9 @@
     "test:ci": "npm run karma -- --browsers ChromeC,FirefoxC",
     "test:watch": "npm run karma -- --browsers ChromeC --auto-watch --no-single-run",
     "prebuild": "rm -rf build",
-    "build": "NODE_ENV=production babel src --out-dir build --ignore **/*.test.js && node copy-files.js",
+    "build:cjs": "NODE_ENV=production BABEL_ENV=cjs babel src --out-dir build --ignore **/*.test.js && node copy-files.js",
+    "build:es": "NODE_ENV=production BABEL_ENV=es babel src --out-dir build/es --ignore **/*.test.js && node copy-files.js",
+    "build": "npm run build:cjs && npm run build:es",
     "start": "NODE_ENV=development webpack-dev-server -d --hot --config docs/webpack.config.js",
     "prepages": "rm -rf docs/build",
     "pages": "NODE_ENV=production webpack -p --progress --config docs/webpack.config.js && node docs/scripts/publish-site.js",
