--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
   "typings": "index.d.ts",
   "scripts": {
     "karma": "NODE_ENV=test /usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start",
-    "test": "npm run karma -- --browsers ChromeC",
-    "test:firefox": "npm run karma -- --browsers FirefoxC",
-    "test:ci": "npm run karma -- --browsers ChromeC,FirefoxC",
+    "test": "npm run karma -- --single-run",
+    "test:chrome": "npm run karma -- --browsers ChromeC --single-run",
+    "test:firefox": "npm run karma -- --browsers FirefoxC --single-run",
     "test:watch": "npm run karma -- --browsers ChromeC --auto-watch --no-single-run",
     "prebuild": "rm -rf build",
-    "build": "npm run build:cjs && npm run build:es",
-    "build:cjs": "NODE_ENV=production BABEL_ENV=cjs babel src --out-dir build --ignore **/*.test.js && node copy-files.js",
-    "build:es": "NODE_ENV=production BABEL_ENV=es babel src --out-dir build/es --ignore **/*.test.js && node copy-files.js",
-    "start": "NODE_ENV=development webpack-dev-server -d --hot --config docs/webpack.config.js",
+    "build": "npm run build:cjs && npm run build:es && node copy-files.js",
+    "build:cjs": "NODE_ENV=production BABEL_ENV=cjs babel src --out-dir build --ignore **/*.test.js",
+    "build:es": "NODE_ENV=production BABEL_ENV=es babel src --out-dir build/es --ignore **/*.test.js",
+    "start": "NODE_ENV=development BABEL_ENV=docs webpack-dev-server -d --hot --config docs/webpack.config.js",
     "prepages": "rm -rf docs/build",
-    "pages": "NODE_ENV=production webpack -p --progress --config docs/webpack.config.js && node docs/scripts/publish-site.js",
+    "pages": "NODE_ENV=production BABEL_ENV=docs webpack -p --progress --config docs/webpack.config.js && node docs/scripts/publish-site.js",
     "lint": "eslint '**/*.js' && eslint --config ./.eslintrc.typescript.json '**/*.ts'",
     "format": "prettier --write '**/*.{js,ts}' && eslint '**/*.js' --fix && eslint --config ./.eslintrc.typescript.json '**/*.ts' --fix",
     "size": "size-limit",
@@ -38,8 +38,8 @@
   "dependencies": {
     "@babel/runtime": "^7.8.7",
     "classnames": "^2.2.6",
-    "deepmerge": "^3.2.0",
-    "eventemitter3": "^3.1.0",
+    "deepmerge": "^4.2.2",
+    "eventemitter3": "^4.0.0",
     "jss": "^10.0.4",
     "jss-preset-default": "^10.0.4",
     "lodash.debounce": "^4.0.8",
@@ -50,9 +50,9 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.7",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-object-assign": "^7.8.3",
     "@babel/plugin-transform-react-constant-elements": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/polyfill": "^7.8.7",
@@ -62,7 +62,7 @@
     "@mdx-js/loader": "^1.5.7",
     "@mdx-js/mdx": "^1.5.7",
     "@mdx-js/react": "^1.5.7",
-    "@size-limit/preset-big-lib": "^4.1.1",
+    "@size-limit/preset-big-lib": "^4.3.1",
     "@types/jss": "^10.0.0",
     "@types/node": "^12.7.8",
     "@types/react": "^16.8.8",
@@ -73,6 +73,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-istanbul": "^6.0.0",
+    "babel-plugin-optimize-clsx": "^2.6.0",
     "babel-plugin-preval": "^4.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "color": "^1.0.3",
@@ -108,7 +109,7 @@
     "minimist": "^1.2.0",
     "prettier": "^1.19.1",
     "promise-queue": "^2.2.5",
-    "puppeteer": "^1.19.0",
+    "puppeteer-core": "^2.1.1",
     "raw-loader": "^3.1.0",
     "react": "^16.13.0",
     "react-codemirror": "^1.0.0",
@@ -121,7 +122,7 @@
     "remark": "^11.0.2",
     "remark-highlight.js": "^5.2.0",
     "remark-html": "^10.0.0",
-    "size-limit": "^4.1.1",
+    "size-limit": "^4.3.1",
     "sticky-sidebar": "^3.3.1",
     "style-loader": "^1.0.0",
     "typescript": "^3.6.3",
