--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "test:firefox": "npm run karma -- --browsers FirefoxC --single-run",
     "test:watch": "npm run karma -- --browsers ChromeC --auto-watch --no-single-run",
     "prebuild": "rm -rf build",
-    "build": "npm run build:cjs && npm run build:es && node copy-files.js",
+    "build": "npm run build:cjs && npm run build:es && node scripts/copy-files.js",
     "build:cjs": "NODE_ENV=production BABEL_ENV=cjs babel src --out-dir build --ignore **/*.test.js",
     "build:es": "NODE_ENV=production BABEL_ENV=es babel src --out-dir build/es --ignore **/*.test.js",
+    "build:pages": "NODE_ENV=production BABEL_ENV=docs webpack -p --progress --config docs/webpack.config.js",
     "start": "NODE_ENV=development BABEL_ENV=docs webpack-dev-server -d --hot --config docs/webpack.config.js",
     "prepages": "rm -rf docs/build",
-    "pages": "NODE_ENV=production BABEL_ENV=docs webpack -p --progress --config docs/webpack.config.js && node docs/scripts/publish-site.js",
+    "pages": "npm run build:pages && node docs/scripts/publish-site.js",
     "lint": "eslint '**/*.js' && eslint --config ./.eslintrc.typescript.json '**/*.ts'",
     "format": "prettier --write '**/*.{js,ts}' && eslint '**/*.js' --fix && eslint --config ./.eslintrc.typescript.json '**/*.ts' --fix",
     "size": "size-limit",
