--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "rambler-ui",
+  "name": "rambler-ui-simple-example",
   "version": "0.0.0",
   "description": "Simple Rambler UI example",
   "scripts": {
-    "dev": "webpack-dev-server -d"
+    "start": "webpack-dev-server -d"
   },
   "dependencies": {
-    "rambler-ui": "^3",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "rambler-ui": "file:../../build",
+    "react": "file:../../node_modules/react",
+    "react-dom": "file:../../node_modules/react-dom"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.5"
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "webpack": "^4.42.0",
+    "webpack-dev-server": "^3.10.3"
   }
 }
