--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "rambler-ui",
+  "name": "rambler-ui-ssr-example",
   "version": "0.0.0",
   "description": "Rambler UI example with SSR",
   "scripts": {
-    "dev": "webpack -p && node server/index.js"
+    "start": "webpack -p && node server/index.js"
   },
   "dependencies": {
-    "babel-register": "^6.26.0",
-    "koa": "^2.5.0",
-    "koa-static": "^4.0.2",
-    "rambler-ui": "^3",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "@babel/register": "^7.8.6",
+    "koa": "^2.11.0",
+    "koa-static": "^5.0.0",
+    "rambler-ui": "file:../../build",
+    "react": "file:../../node_modules/react",
+    "react-dom": "file:../../node_modules/react-dom"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.4",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "webpack": "^3.12.0",
-    "webpack-dev-server": "^2.11.5"
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "webpack": "^4.42.0",
+    "webpack-dev-server": "^3.10.3"
   }
 }
