--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Rambler UI Components based on React.js",
   "main": "index.js",
   "module": "es/index.js",
-  "typings": "index.d.ts",
+  "types": "index.d.ts",
   "scripts": {
     "karma": "NODE_ENV=test /usr/bin/env node --max-old-space-size=4096 ./node_modules/karma/bin/karma start",
     "test": "npm run karma -- --single-run",
