chore: fix react versions in peer deps

--- a/package.json
+++ b/package.json
@@ -131,8 +131,8 @@
     "webpack-dev-server": "^3.10.3"
   },
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": "^16.8.0 || 17.x || 18.x",
+    "react-dom": "^16.8.0 || 17.x || 18.x"
   },
   "keywords": [
     "react",
