--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "classnames": "^2.2.6",
     "deepmerge": "^4.2.2",
     "eventemitter3": "^4.0.0",
-    "jss": "^10.0.4",
-    "jss-preset-default": "^10.0.4",
+    "jss": "10.9.0",
+    "jss-preset-default": "10.9.0",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
-    "react-jss": "^10.0.4",
+    "react-jss": "10.9.0",
     "react-scrollbars-custom": "^4.0.27"
   },
   "devDependencies": {
